final ui change

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Review & Refactor Tool</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
 
@@ -16,7 +18,8 @@
 
 
         <div class="description">
-            <p>Click the button below to check your code. Paste your code into the provided text area, and we will help you analyze and refactor it for better performance and readability.</p>
+            <p>Click the button below to check your code. Paste your code into the provided text area, and we will help
+                you analyze and refactor it for better performance and readability.</p>
             <button id="checkCodeButton" onclick="showCodeInput()">Check Your Code</button>
         </div>
 
@@ -30,7 +33,7 @@
                 <button onclick="refactorCode()">Refactor</button>
             </div>
 
-  
+
             <h2>Review Issues:</h2>
             <pre id="issuesOutput"></pre>
 
@@ -41,4 +44,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
